--- a/MODULO-CSS/Pseudo-clases adicionales/html/index.html
+++ b/MODULO-CSS/Pseudo-clases adicionales/html/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>Pseudo clases adiciones</title>
     <link rel="stylesheet" href="/MODULO-CSS/Pseudo-clases adicionales/Archivo css/estilos.css">
 
@@ -12,35 +13,45 @@
 
 
 <body>
-    
-    <div id="Title-PseudoClase">Pseudo clases adicionales</div>
 
-    <nav>
-        <ul>
-            <li><a href=""></a>Enlace 1</li>
-            <li><a href=""></a>Enlace 2</li>
-            <li><a href=""></a>Enlace 3</li>
-        </ul>
-    </nav>
+    <thead>
+        <div id="Title-PseudoClase">Pseudo clases adicionales</div>
 
-    <section id="section1">
-        <h1>Seccion 1</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum vitae quos ad sapiente delectus perspiciatis beatae quo dignissimos necessitatibus. Laboriosam totam laborum cumque consequuntur molestias praesentium voluptatibus beatae. Cupiditate, dolore.</p>
-    </section>
+        <nav>
+            <ul>
+                <li><a href=""></a>Enlace 1</li>
+                <li><a href=""></a>Enlace 2</li>
+                <li><a href=""></a>Enlace 3</li>
+            </ul>
+        </nav>
 
-    <section id="section2">
-        <h1>Seccion 2</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro non, laboriosam delectus quidem quia eaque ab possimus quod dignissimos repellat voluptate modi officiis. Est ipsam aperiam doloribus nisi laboriosam repellat?</p>
-    </section>
+        <section id="section1">
+            <h1>Seccion 1</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum vitae quos ad sapiente delectus
+                perspiciatis beatae quo dignissimos necessitatibus. Laboriosam totam laborum cumque consequuntur
+                molestias praesentium voluptatibus beatae. Cupiditate, dolore.</p>
+        </section>
 
-    <section id="section3">
-        <h1>Seccion 3</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, illum. Suscipit tempore voluptatum aspernatur natus modi sint a adipisci porro, quia delectus eius eveniet iure rem in asperiores aut earum.
-        </p>
-    </section>
+        <section id="section2">
+            <h1>Seccion 2</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro non, laboriosam delectus quidem quia eaque
+                ab possimus quod dignissimos repellat voluptate modi officiis. Est ipsam aperiam doloribus nisi
+                laboriosam repellat?</p>
+        </section>
 
-    <section>
-        <p></p>
-    </section>
+        <section id="section3">
+            <h1>Seccion 3</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, illum. Suscipit tempore voluptatum
+                aspernatur natus modi sint a adipisci porro, quia delectus eius eveniet iure rem in asperiores aut
+                earum.
+            </p>
+        </section>
+
+        <section>
+            <p></p>
+        </section>
+    </thead>
+
 </body>
+
 </html>
