--- a/MODULO-CSS/Pseudo-clases adicionales/html/index.html
+++ b/MODULO-CSS/Pseudo-clases adicionales/html/index.html
@@ -19,29 +19,29 @@
 
         <nav>
             <ul>
-                <li><a href=""></a>Enlace 1</li>
-                <li><a href=""></a>Enlace 2</li>
-                <li><a href=""></a>Enlace 3</li>
+                <li><a id="enlace" target="_blank" href="https://www.google.com/">Google 1</a></li>
+                <li><a id="enlace" target="_blank" href="https://www.google.com/">Google 2</a></li>
+                <li><a id="enlace" target="_blank" href="https://www.google.com/">Google 3</a></li>
             </ul>
         </nav>
 
         <section id="section1">
-            <h1>Seccion 1</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum vitae quos ad sapiente delectus
+            <h1 id="secciones">Sección 1</h1>
+            <p id="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum vitae quos ad sapiente delectus
                 perspiciatis beatae quo dignissimos necessitatibus. Laboriosam totam laborum cumque consequuntur
                 molestias praesentium voluptatibus beatae. Cupiditate, dolore.</p>
         </section>
 
         <section id="section2">
-            <h1>Seccion 2</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro non, laboriosam delectus quidem quia eaque
+            <h1 id="secciones">Sección 2</h1>
+            <p id="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro non, laboriosam delectus quidem quia eaque
                 ab possimus quod dignissimos repellat voluptate modi officiis. Est ipsam aperiam doloribus nisi
                 laboriosam repellat?</p>
         </section>
 
         <section id="section3">
-            <h1>Seccion 3</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, illum. Suscipit tempore voluptatum
+            <h1 id="secciones">Sección 3</h1>
+            <p id="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, illum. Suscipit tempore voluptatum
                 aspernatur natus modi sint a adipisci porro, quia delectus eius eveniet iure rem in asperiores aut
                 earum.
             </p>
