--- a/MODULO-CSS/Pseudo-clases adicionales/html/index.html
+++ b/MODULO-CSS/Pseudo-clases adicionales/html/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +14,22 @@
 
 
 <body>
+    <!-- etiqueta vacia a la cual se le adjudicó algunas propiedades -->
+    <section></section>
+    
+    <!-- para crear una figura vacia , tan simple como poner una etqueta cualquiera vacia (sin texto) y añadir propiedades con :empty{
+        background color: red;
+        border-radius: 60%;
+        border 5px solid black;
+    } 
+    Nota: No puede haber separación de la etiqueta seleccionada, por que de caso contrario no se aplican las propiedades o estilos a la misma.
+-->
 
     <thead>
         <div id="Title-PseudoClase">Pseudo clases adicionales</div>
+
+        <div id="titulo-uno">Ésto es una prueba de la pseudo clase :Not</div>
+        <div id="titulo-dos">Veremos que sucede</div>
 
         <nav>
             <ul>
@@ -47,11 +61,12 @@
             </p>
         </section>
 
-        <section>
-            <p></p>
-        </section>
     </thead>
 
+
+    <!-- etiqueta vacia a la cual se le adjudicó algunas propiedades -->
+    <div></div>
+        
 </body>
 
 </html>
