--- a/MODULO-CSS/Propiedades de fuentes/html/index.html
+++ b/MODULO-CSS/Propiedades de fuentes/html/index.html
@@ -14,7 +14,9 @@
 
 <body>
    
+    <div id="title-prop">Scroll Bar</div>
     <div id="title-prop">Propiedades de fuentes</div>
+    
     
 
 </body>
