--- a/MODULO-CSS/Selectores avanzados/html/index.html
+++ b/MODULO-CSS/Selectores avanzados/html/index.html
@@ -12,6 +12,7 @@
 
 <body>
 
+    <div id="selectores-tit-scroll">Scroll Bar</div>
     <div id="selectores">Selectores avanzados</div>
 
     <h1>H1</h1>
