--- a/MODULO-CSS/Modelos de cajas/html/index.html
+++ b/MODULO-CSS/Modelos de cajas/html/index.html
@@ -14,6 +14,10 @@
 <body>
 
     <h1 id="titulo">Modelos de cajas</h1>
+
+    <div class="caja">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, nostrum nisi. Iure sed quidem similique. Labore hic nulla, eveniet repudiandae amet quos neque dolores nobis, sit, fuga libero. Magnam, voluptatem.</p>
+    </div>
     
 </body>
 </html>
