--- a/MODULO-CSS/Modelos de cajas/html/index.html
+++ b/MODULO-CSS/Modelos de cajas/html/index.html
@@ -18,6 +18,18 @@
     <div class="caja">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, nostrum nisi. Iure sed quidem similique. Labore hic nulla, eveniet repudiandae amet quos neque dolores nobis, sit, fuga libero. Magnam, voluptatem.</p>
     </div>
+
+    <div id="segundo-titulo">Modelo de caja box sizing</div>
+
+    <div class="contenedor">
+        <div class="cajita">
+            <h1 id="numero">1</h1>
+        </div>
+        <div class="cajita">
+            <h1 id="numero">2</h1>
+        </div>
+
+    </div>
     
 </body>
 </html>
