--- a/MODULO-CSS/Modelos de cajas/html/index.html
+++ b/MODULO-CSS/Modelos de cajas/html/index.html
@@ -28,8 +28,20 @@
         <div class="cajita">
             <h1 id="numero">2</h1>
         </div>
-
     </div>
+
+    <!-- Titulo -->
+    <div id="tit-Modelos">Modelos de cajas - Segundo ejemplo</div>
     
+    <nav>
+        <ul>
+            <li id="lista">item 1 <span>Inline</span></li>
+            <li id="lista">item 2</li>
+            <li id="lista">item 3</li>
+            <li id="lista">item 4</li>
+            <li id="lista">item 5</li>
+        </ul>
+    </nav>
+
 </body>
 </html>
