--- a/MODULO-CSS/Combinadores de selectores/html/index.html
+++ b/MODULO-CSS/Combinadores de selectores/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Combinadores de selectores</title>
 
-    <link rel="stylesheet" href="/MODULO-CSS/Combinadores de selectores/Estilos/estilos.css">
+    <link rel="stylesheet" href="../Estilos css/estilos.css">
 </head>
 
 <body>
