--- a/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Html/index.html
+++ b/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Html/index.html
@@ -8,13 +8,17 @@
 
     <title>Creando textos en html</title>
 
+    <!-- enlaces -->
+    <link rel="preload" href="../Estilos/styles.css" as="style">
+    <link rel="stylesheet" href="../Estilos/styles.css">
+
 </head>
 
 <body>
 
     <!-- Cabecera -->
     <header>
-        <h1>Leandro Bertero - Freelancer</h1>
+        <h1>Leandro Bertero - <span>Freelancer</span></h1>
     </header>
 
     <!-- Inicio de barra de navegacion -->
@@ -132,6 +136,8 @@
     <footer>
         <p>Todos los derechos reservados de Leandro Bertero - Freelancer</p>
     </footer>
+
+    
 
 </body>
 
