--- a/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Html/index.html
+++ b/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Html/index.html
@@ -12,6 +12,11 @@
     <link rel="preload" href="../Estilos/styles.css" as="style">
     <link rel="stylesheet" href="../Estilos/styles.css">
 
+    <!-- Fuentes de google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
