--- a/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Html/index.html
+++ b/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Html/index.html
@@ -9,6 +9,7 @@
     <title>Creando textos en html</title>
 
     <!-- enlaces -->
+    <link rel="preload" href="../Estilos/normalize.css">
     <link rel="preload" href="../Estilos/styles.css" as="style">
     <link rel="stylesheet" href="../Estilos/styles.css">
 
