estilos de navegacion y tipos de efectos a textos

--- a/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Html/index.html
+++ b/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Html/index.html
@@ -28,12 +28,14 @@
     </header>
 
     <!-- Inicio de barra de navegacion -->
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Sobre mi</a>
-        <a href="#">Clientes</a>
-        <a href="#">Contacto</a>
-    </nav>
+    <div class="nav-bg">
+        <nav class="navegacion-Principal contenedor">
+            <a href="#">Inicio</a>
+            <a href="#">Sobre mi</a>
+            <a href="#">Clientes</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </div>
     <!-- Fin de barra de navegancion -->
 
     <!-- <img src="../imagenes/BANNERS_BLOG-5.jpeg" alt="Imagen de fondo para el cuerpo de la web"> -->
