--- a/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Html/index.html
+++ b/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Html/index.html
@@ -40,15 +40,17 @@
 
     <!-- <img src="../imagenes/BANNERS_BLOG-5.jpeg" alt="Imagen de fondo para el cuerpo de la web"> -->
 
-    <section>
-        <h2 class="titulo">Diseño y desarrollo web - <span>Freelancer</span></h2>
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="88" height="88" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffc107" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-            <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
-            <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
-        </svg>
-        <p>Córdoba, Argentina</p>
-        <a href="#">Contactar</a>
+    <section class="Hero">
+        <div class="contenido-hero">
+            <h2 class="titulo">Diseño y desarrollo web - <span>Freelancer</span></h2>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="88" height="88" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffc107" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
+                <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+            </svg>
+            <p>Córdoba, Argentina</p>
+            <a href="#">Contactar</a>
+        </div>
     </section>
 
     <!-- Cuerpo de la pagina principal -->
