Acomodando el header

--- a/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Html/index.html
+++ b/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Html/index.html
@@ -42,7 +42,7 @@
 
     <section class="Hero">
         <div class="contenido-hero">
-            <h2 class="titulo">Diseño y desarrollo web - <span>Freelancer</span></h2>
+            <h2>Diseño y desarrollo web - <span>Freelancer</span></h2>
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="88" height="88" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffc107" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
