nuevo proyecto - Tienda de productos on line

--- a/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Html/index.html
+++ b/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Html/index.html
@@ -171,7 +171,7 @@
     </main>
 
 
-    <footer>
+    <footer class="footer">
         <p>Todos los derechos reservados de Leandro Bertero - Freelancer</p>
     </footer>
 
