--- a/Proyecto_Web_Ventas/html/index.html
+++ b/Proyecto_Web_Ventas/html/index.html
@@ -11,8 +11,13 @@
 
 <body>
 
+    <h1>Proyecto - Tienda virtual </h1>
+
     
-    
+
+    <!-- enlaces -->
+    <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="../estilos/normalize.css">
 
 </body>
 </html>
