--- a/Proyecto_Web_Ventas/html/index.html
+++ b/Proyecto_Web_Ventas/html/index.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Frontend Store</title>
-
+    <title>Front end Store</title>
 </head>
 
 <body>
 
-    <h1>Proyecto - Tienda virtual </h1>
+    <header>
+        <a href="../html/index.html">
+            <img src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/logo.png" alt="logotipo">
+        </a>
+    </header>
 
-    
+    <nav>
+        <a href="#">Tienda</a>
+        <a href="#">Nosotros</a>
+    </nav>
 
-    <!-- enlaces -->
-    <link rel="stylesheet" href="../estilos/style.css">
+
+
     <link rel="stylesheet" href="../estilos/normalize.css">
+    <link rel="stylesheet" href="../estilos/style.css">
 
 </body>
 </html>
