Introduccion a BEM - Modificador de elemento de bloque

--- a/Proyecto_Web_Ventas/html/index.html
+++ b/Proyecto_Web_Ventas/html/index.html
@@ -9,9 +9,9 @@
 
 <body>
 
-    <header>
+    <header class="header">
         <a href="../html/index.html">
-            <img src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/logo.png" alt="logotipo">
+            <img class="header__logo" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/logo.png" alt="logotipo">
         </a>
     </header>
 
@@ -21,9 +21,10 @@
     </nav>
 
 
-
+    <!-- Enaces de css -->
     <link rel="stylesheet" href="../estilos/normalize.css">
     <link rel="stylesheet" href="../estilos/style.css">
+
 
 </body>
 </html>
