Fin introduccion a Bem - Bloques de elementos de modificadores

--- a/Proyecto_Web_Ventas/html/index.html
+++ b/Proyecto_Web_Ventas/html/index.html
@@ -9,15 +9,17 @@
 
 <body>
 
+    <!-- Header -->
     <header class="header">
         <a href="../html/index.html">
             <img class="header__logo" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/logo.png" alt="logotipo">
         </a>
     </header>
 
-    <nav>
-        <a href="#">Tienda</a>
-        <a href="#">Nosotros</a>
+    <!-- Navegacion -->
+    <nav class="navegacion">
+        <a class="navegacion__enlace navegacion__enlace--activo" href="#">Tienda</a>
+        <a class="navegacion__enlace" href="#">Nosotros</a>
     </nav>
 
 
