--- a/Proyecto_Web_Ventas/html/producto.html
+++ b/Proyecto_Web_Ventas/html/producto.html
@@ -2,10 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Producto</title>
+    <title>Front end Store</title>
 </head>
+
 <body>
-    
+
+    <!-- Header -->
+    <header class="header">
+        <a href="../html/index.html">
+            <img class="header__logo" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/logo.png" alt="logotipo">
+        </a>
+    </header>
+
+    <!-- Navegacion -->
+    <nav class="navegacion">
+        <a class="navegacion__enlace navegacion__enlace--activo" href="#">Tienda</a>
+        <a class="navegacion__enlace" href="#">Nosotros</a>
+    </nav>
+
+
+    <main class="contenedor">
+        <h1>Nuestros productos</h1>
+    </main>
+
+    <footer class="footer">
+        <p class="footer__texto">Front End Store - Todos los derechos reservados 2023</p>
+    </footer>
+
+
+    <!-- Enaces de css -->
+    <link rel="stylesheet" href="../estilos/normalize.css">
+    <link rel="stylesheet" href="../estilos/style.css">
+
+
 </body>
 </html>
