--- a/Proyecto_Web_Ventas/html/index.html
+++ b/Proyecto_Web_Ventas/html/index.html
@@ -23,6 +23,15 @@
     </nav>
 
 
+    <main class="contenedor">
+        <h1>Nuestros productos</h1>
+    </main>
+
+    <footer class="footer">
+        <p class="footer__texto">Front End Store - Todos los derechos reservados 2023</p>
+    </footer>
+
+
     <!-- Enaces de css -->
     <link rel="stylesheet" href="../estilos/normalize.css">
     <link rel="stylesheet" href="../estilos/style.css">
