--- a/Proyecto_Web_Ventas/html/index.html
+++ b/Proyecto_Web_Ventas/html/index.html
@@ -18,8 +18,8 @@
 
     <!-- Navegacion -->
     <nav class="navegacion">
-        <a class="navegacion__enlace navegacion__enlace--activo" href="#">Tienda</a>
-        <a class="navegacion__enlace" href="#">Nosotros</a>
+        <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
+        <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     </nav>
 
 
