--- a/Proyecto_Web_Ventas/html/producto.html
+++ b/Proyecto_Web_Ventas/html/producto.html
@@ -18,13 +18,13 @@
 
     <!-- Navegacion -->
     <nav class="navegacion">
-        <a class="navegacion__enlace navegacion__enlace--activo" href="#">Tienda</a>
-        <a class="navegacion__enlace" href="#">Nosotros</a>
+        <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
+        <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     </nav>
 
 
     <main class="contenedor">
-        <h1>Nuestros productos</h1>
+        <h1>Producto</h1>
     </main>
 
     <footer class="footer">
