--- a/Proyecto_Web_Ventas/html/index.html
+++ b/Proyecto_Web_Ventas/html/index.html
@@ -25,7 +25,103 @@
 
     <main class="contenedor">
         <h1>Nuestros productos</h1>
+        
+        <div class="grid">
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/1.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div> <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/2.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div> <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/3.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div> <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/4.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div> <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/5.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div> <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/6.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div> <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/7.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div> <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/8.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div> <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/9.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div> <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/10.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div> <!--.producto-->
+            
+        </div>
+
     </main>
+
 
     <footer class="footer">
         <p class="footer__texto">Front End Store - Todos los derechos reservados 2023</p>
