fin carga de imagenes de productos

--- a/Proyecto_Web_Ventas/html/index.html
+++ b/Proyecto_Web_Ventas/html/index.html
@@ -40,7 +40,7 @@
                 <a href="producto.html">
                     <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/2.jpg" alt="imagen camisa">
                     <div class="producto__informacion">
-                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__nombre">AngularJs</p>
                         <p class="producto__precio">$25</p>
                     </div>
                 </a>
@@ -49,7 +49,7 @@
                 <a href="producto.html">
                     <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/3.jpg" alt="imagen camisa">
                     <div class="producto__informacion">
-                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__nombre">ReactJS</p>
                         <p class="producto__precio">$25</p>
                     </div>
                 </a>
@@ -58,7 +58,7 @@
                 <a href="producto.html">
                     <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/4.jpg" alt="imagen camisa">
                     <div class="producto__informacion">
-                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__nombre">Redux</p>
                         <p class="producto__precio">$25</p>
                     </div>
                 </a>
@@ -67,7 +67,7 @@
                 <a href="producto.html">
                     <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/5.jpg" alt="imagen camisa">
                     <div class="producto__informacion">
-                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__nombre">NodeJs</p>
                         <p class="producto__precio">$25</p>
                     </div>
                 </a>
@@ -76,7 +76,7 @@
                 <a href="producto.html">
                     <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/6.jpg" alt="imagen camisa">
                     <div class="producto__informacion">
-                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__nombre">Sass</p>
                         <p class="producto__precio">$25</p>
                     </div>
                 </a>
@@ -85,7 +85,7 @@
                 <a href="producto.html">
                     <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/7.jpg" alt="imagen camisa">
                     <div class="producto__informacion">
-                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__nombre">HTML5</p>
                         <p class="producto__precio">$25</p>
                     </div>
                 </a>
@@ -94,7 +94,7 @@
                 <a href="producto.html">
                     <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/8.jpg" alt="imagen camisa">
                     <div class="producto__informacion">
-                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__nombre">Github</p>
                         <p class="producto__precio">$25</p>
                     </div>
                 </a>
@@ -103,7 +103,7 @@
                 <a href="producto.html">
                     <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/9.jpg" alt="imagen camisa">
                     <div class="producto__informacion">
-                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__nombre">BulmaCSS</p>
                         <p class="producto__precio">$25</p>
                     </div>
                 </a>
@@ -112,11 +112,48 @@
                 <a href="producto.html">
                     <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/10.jpg" alt="imagen camisa">
                     <div class="producto__informacion">
-                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__nombre">TypeScript</p>
                         <p class="producto__precio">$25</p>
                     </div>
                 </a>
             </div> <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/11.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Drupal</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div> <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/12.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">JavaScript</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div> <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/13.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">GraphQL</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div> <!--.producto-->
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="producto__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/14.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">WordPress</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div> <!--.producto-->
+            
             
         </div>
 
