Creando la pagina de nosotros

--- a/Proyecto_Web_Ventas/html/nosotros.html
+++ b/Proyecto_Web_Ventas/html/nosotros.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +13,8 @@
     <!-- Header -->
     <header class="header">
         <a href="../html/index.html">
-            <img class="header__logo" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/logo.png" alt="logotipo">
+            <img class="header__logo" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/logo.png"
+                alt="logotipo">
         </a>
     </header>
 
@@ -25,6 +27,43 @@
 
     <main class="contenedor">
         <h1>Nosotros</h1>
+
+        <div class="nosotros">
+            <div class="nosotros__contenido">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget turpis sit amet dui tempor
+                    tincidunt. Mauris nisl odio, sagittis ut nulla a, congue mattis urna. Vivamus egestas sem in tincidunt
+                    consectetur. Etiam volutpat augue in arcu mattis congue. Praesent enim nulla, dapibus vel finibus non,
+                    lobortis et arcu. Integer ex diam, consequat at mattis eget, aliquam luctus quam. Praesent a posuere
+                    magna, in eleifend metus. Aliquam finibus augue eget nisl tristique viverra sit amet nec nibh. Ut vitae
+                    dolor non sem ornare dapibus. Donec lorem risus, auctor sit amet libero ut, ullamcorper facilisis elit.
+                    Sed cursus enim nec lorem cursus mollis. Donec nulla augue, laoreet non sapien sit amet, vehicula
+                    sodales sapien. Vivamus ultricies ornare sapien. Mauris et accumsan orci. Nulla vulputate leo eget dui
+                    venenatis, et dictum risus fringilla.
+                </p>
+
+                <p>Praesent consectetur quam quis lacus vulputate dapibus. Vestibulum sed augue id nunc hendrerit semper
+                    non id neque. Quisque tristique urna consequat mattis pretium. Proin efficitur vitae elit a lacinia.
+                    Quisque dignissim non urna tristique blandit. Praesent porta magna id nunc congue condimentum quis sit
+                    amet metus. Aliquam tempus mauris risus, vitae elementum justo dignissim id. Sed eleifend leo est, nec
+                    posuere sapien ultricies at. Cras pulvinar eget lectus quis consectetur. Proin tempus aliquam fringilla.
+                    Nam varius turpis et efficitur vulputate.
+    
+                    Maecenas felis risus, tincidunt ut lacus eu, viverra tempor nunc. Maecenas mi nisi, malesuada et elit
+                    eleifend, pretium mattis nisl. Quisque et arcu cursus eros fringilla lobortis. Quisque ut sem in ex
+                    dictum sodales nec sit amet ex. Vestibulum consectetur eget felis non egestas. Etiam eget neque at
+                    turpis iaculis aliquet. Integer nisi mauris, pellentesque eu odio ut, vehicula porttitor nunc. Aliquam
+                    erat volutpat.
+                    Interdum et malesuada fames ac ante ipsum primis in faucibus. In sed mollis dolor. Phasellus ut massa
+                    velit. Maecenas eros risus, dictum quis tortor non, commodo varius ipsum. Ut pretium nunc vel erat
+                    dapibus volutpat. Quisque vitae tortor lacus. Fusce accumsan libero ut urna porttitor, ut egestas sapien
+                    tempus. Pellentesque tincidunt hendrerit nulla et vehicula.
+                </p>
+
+               
+            </div>
+            <img class="nosotros__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/nosotros.jpg"
+                alt="imagen nosotros">
+        </div>
     </main>
 
     <footer class="footer">
@@ -38,4 +77,5 @@
 
 
 </body>
+
 </html>
