--- a/Proyecto_Web_Ventas/html/producto.html
+++ b/Proyecto_Web_Ventas/html/producto.html
@@ -24,7 +24,7 @@
 
 
     <main class="contenedor">
-        <h1>Producto</h1>
+        <h1>React JS</h1>
     </main>
 
     <footer class="footer">
