--- a/Proyecto_Web_Ventas/html/producto.html
+++ b/Proyecto_Web_Ventas/html/producto.html
@@ -25,6 +25,22 @@
 
     <main class="contenedor">
         <h1>React JS</h1>
+        <div class="camisa">
+            <img class="camisa__imagen" src="../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/3.jpg" alt="Imagen del producto">
+            <div class="caminsa__contenido">
+                <p>Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer.</p>
+
+                <form class="formulario">
+                    <select>
+                        <option disabled selected>Seleccioná tu talle</option>
+                        <option>Chica</option>
+                        <option>Mediana</option>
+                        <option>Grande</option>
+                    </select>
+                    <input type="number" placeholder="Cantidad" min="1">
+                </form>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
