--- a/Proyecto_Web_Ventas/html/producto.html
+++ b/Proyecto_Web_Ventas/html/producto.html
@@ -31,13 +31,14 @@
                 <p>Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer.</p>
 
                 <form class="formulario">
-                    <select>
+                    <select class="formulario__campo">
                         <option disabled selected>Seleccioná tu talle</option>
                         <option>Chica</option>
                         <option>Mediana</option>
                         <option>Grande</option>
                     </select>
-                    <input type="number" placeholder="Cantidad" min="1">
+                    <input class="formulario__campo" type="number" placeholder="Cantidad" min="1">
+                    <input class="formulario__submit" type="submit" value="Agregar al carrito">
                 </form>
             </div>
         </div>
