--- a/Blog de cafe/html/index.html
+++ b/Blog de cafe/html/index.html
@@ -18,6 +18,12 @@
 
 <body>
 
+    <header class="header">
+        <div class="header__texto">
+            <h2 class="no-margin">Blog de café con consejos y cursos</h2>
+            <p class="no-margin">Aprende de los expertos con las mejores recetas y consejos</p>
+        </div>
+    </header>
 
 
 
