--- a/Blog de cafe/html/index.html
+++ b/Blog de cafe/html/index.html
@@ -19,10 +19,29 @@
 <body>
 
     <header class="header">
+
+        <div class="contenedor">
+            
+            <div class="barra">
+            
+                <a class="logo" href="../html/index.html">
+                    <h1 class="logo__nombre">Blog<span class="logo__bold">deCafé</span></h1>
+                </a>
+
+                <nav class="navegacion">
+                    <a href="nosotros.html" class="navegacion__enlace"></a>
+                    <a href="cursos.html" class="navegacion__enlace"></a>
+                    <a href="contacto.html" class="navegacion__enlace"></a>
+                </nav>
+
+            </div>
+        </div>
+
         <div class="header__texto">
             <h2 class="no-margin">Blog de café con consejos y cursos</h2>
             <p class="no-margin">Aprende de los expertos con las mejores recetas y consejos</p>
         </div>
+
     </header>
 
 
