--- a/Blog de cafe/html/index.html
+++ b/Blog de cafe/html/index.html
@@ -25,13 +25,13 @@
             <div class="barra">
             
                 <a class="logo" href="../html/index.html">
-                    <h1 class="logo__nombre">Blog<span class="logo__bold">deCafé</span></h1>
+                    <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">deCafé</span></h1>
                 </a>
 
                 <nav class="navegacion">
-                    <a href="nosotros.html" class="navegacion__enlace"></a>
-                    <a href="cursos.html" class="navegacion__enlace"></a>
-                    <a href="contacto.html" class="navegacion__enlace"></a>
+                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+                    <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
                 </nav>
 
             </div>
