creando la web de nosotros

--- a/Blog de cafe/html/index.html
+++ b/Blog de cafe/html/index.html
@@ -141,7 +141,7 @@
                     <a href="cursos.html" class="navegacion__enlace">Cursos</a>
                     <a href="contacto.html" class="navegacion__enlace">Contacto</a>
                 </nav>
-                
+            </div>    
         </div>
     </footer>
 
